--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-tactile
 markdown: GFM
 title: Photon-Limited Deblurring Dataset
 description: Real-world dataset for deblurring in photon-limited scenes
